<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_24"
    android:background="@drawable/bg_dialog_project">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_create_project_title"
        android:textColor="@color/smartmove_text_primary"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDialogSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/dialog_create_project_subtitle"
        android:textColor="@color/smartmove_text_secondary"
        android:textSize="@dimen/text_size_body_sm" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etProjectName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginTop="@dimen/spacing_20"
        android:background="@drawable/bg_input"
        android:hint="@string/hint_project_name"
        android:inputType="textCapWords"
        android:paddingStart="@dimen/spacing_16"
        android:paddingEnd="@dimen/spacing_16"
        android:textColor="@color/smartmove_text_primary"
        android:textColorHint="@color/smartmove_text_secondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_22"
        android:gravity="end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelProject"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_button_dialog"
            android:layout_marginEnd="@dimen/spacing_10"
            android:background="@drawable/bg_secondary_button"
            android:text="@string/btn_cancel"
            android:textAllCaps="false"
            android:textColor="@color/button_primary_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateProject"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_button_dialog"
            android:background="@drawable/bg_primary_button"
            android:text="@string/btn_create"
            android:textAllCaps="false"
            android:textColor="@color/smartmove_text_secondary"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
