<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_14"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/corner_md"
    app:cardElevation="@dimen/elevation_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_16">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBoxName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/smartmove_text_primary"
            android:textSize="@dimen/text_size_subtitle"
            android:textStyle="bold"
            tools:text="@string/placeholder_box_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBoxRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_6"
            android:textColor="@color/smartmove_text_secondary"
            android:textSize="@dimen/text_size_body_sm"
            tools:text="@string/placeholder_room" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvItemsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_10"
            android:text="@string/box_items_label"
            android:textColor="@color/smartmove_text_secondary"
            android:textSize="@dimen/text_size_sm"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBoxItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/smartmove_text_primary"
            android:textSize="@dimen/text_size_body_sm"
            tools:text="@string/placeholder_scan_items" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_12"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBoxPriority"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_chip"
                android:background="@drawable/bg_priority_yellow"
                android:gravity="center"
                android:paddingStart="@dimen/spacing_12"
                android:paddingEnd="@dimen/spacing_12"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:text="@string/priority_yellow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBoxStatus"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_chip"
                android:layout_marginStart="@dimen/spacing_8"
                android:background="@drawable/bg_chip_soft"
                android:gravity="center"
                android:paddingStart="@dimen/spacing_12"
                android:paddingEnd="@dimen/spacing_12"
                android:textColor="@color/smartmove_text_primary"
                android:textStyle="bold"
                tools:text="@string/placeholder_status" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
